--- a/exercise_4.ipynb
+++ b/exercise_4.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "#QUESTION a):\n",
+    "#QUESTION (a):\n",
     "\n",
     "'''\n",
     "GILS implements the greedy iterated least squares price policy.\n",
