--- a/DDDMOR HW3.ipynb
+++ b/DDDMOR HW3.ipynb
@@ -25,16 +25,23 @@
     "The OUTPUT is p_{t+1} (int), the price chosen by GILS for the next time stamp.\n",
     "'''\n",
     "\n",
-    "def Sign(x):\n",
-    "    if x >= 0\"\n",
-    "        return 1\n",
-    "    else \n",
-    "        return -1\n",
+    "\n",
     "    \n",
     "def GILS(b_1, b_2, b_3, b_4, min_p, max_p, t, h):\n",
     "    \"Not implemented\"\n",
     "    return False\n",
     "\n",
+    "\"\"\"\n",
+    "Sign function determines the sign of a float.\n",
+    "If the float is greater or equal than 0 the return equals 1,\n",
+    "otherwise the return equals -1.\n",
+    "\"\"\"\n",
+    "\n",
+    "def Sign(x):\n",
+    "    if x >= 0\"\n",
+    "        return 1\n",
+    "    else \n",
+    "        return -1\n",
     "'''\n",
     "CILS implements the constrained iterated least squares price policy. The INPUTS are\n",
     "the same as for GILS with the threshold paramter K (float) added. OUTPUT is also p_{t+1}\n",
