--- a/exercise_4.ipynb
+++ b/exercise_4.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import random\n",
     "\n",
     "#QUESTION (a):\n",
     "\n",
@@ -27,19 +28,79 @@
     "'''\n",
     "\n",
     "def GILS(b_1, b_2, b_3, b_4, min_p, max_p, t, h):\n",
-    "    \"Not implemented\"\n",
-    "    return False\n",
+    "    \n",
+    "    # Choose a random price for the first 2 time stamps.\n",
+    "    if t == 0:\n",
+    "        return random.uniform(min_p,max_p)\n",
+    "    if t == 1:\n",
+    "        p_1 = h[0][0]\n",
+    "        p_2 = random.uniform(min_p,max_p)\n",
+    "        while p_2 == p_1:\n",
+    "            p_2 = random.uniform(min_p,max_p)\n",
+    "        return p_2\n",
+    "    \n",
+    "    # If t>1, compute the least squares estimator (theta_1, theta_2).\n",
+    "    # We use the usual solution for ls estimator in linear regression.\n",
+    "    prices = [h[i][0] for i in range(t)]\n",
+    "    demands = [h[i][1] for i in range(t)]\n",
+    "    prod = [prices[i]*demands[i] for i in range(t)]\n",
+    "    pric_squar = [prices[i]*prices[i] for i in range(t)]\n",
+    "    \n",
+    "    theta_2 = (sum(prod) - (sum(prices)*sum(demands))/t)/(sum(pric_squar) - sum(prices)*sum(prices)/t)\n",
+    "    theta_1 = sum(demands)/t - theta_2*sum(prices)/t\n",
+    "    \n",
+    "    # Project them onto [b_1,b_2] x [b_3,b_4] if necessary\n",
+    "    if theta_1 < b_1:\n",
+    "        theta_1 = b_1\n",
+    "    if theta_1 > b_2:\n",
+    "        theta_1 = b_2\n",
+    "    if theta_2 < b_3:\n",
+    "        theta_2 = b_3\n",
+    "    if theta_2 > b_4:\n",
+    "        theta_2 = b_4\n",
+    "    \n",
+    "    # Return the perceived optimal price (assuming it will fall into [min_p, max_p])\n",
+    "    return -theta_1/(2*theta_2)\n",
     "\n",
+    "\n",
+    "\"\"\"\n",
+    "Sign function determines the sign of a float.\n",
+    "If the float is greater or equal than 0 the return equals 1,\n",
+    "otherwise the return equals -1.\n",
+    "\"\"\"\n",
+    "\n",
+    "def Sign(x):\n",
+    "    if x >= 0\"\n",
+    "        return 1\n",
+    "    else \n",
+    "        return -1\n",
     "'''\n",
     "CILS implements the constrained iterated least squares price policy. The INPUTS are\n",
     "the same as for GILS with the threshold paramter K (float) added. OUTPUT is also p_{t+1}\n",
     "'''\n",
     "\n",
     "def CILS(b_1, b_2, b_3, b_4, min_p, max_p, t, h, K):\n",
-    "    \"Not implemented\"\n",
-    "    return False\n",
+    "    \n",
+    "    #  Calculate the unconstrained price. \n",
+    "    U_price = GILS(b_1, b_2, b_3, b_4, min_p, max_p, t, h)\n",
+    "    \n",
+    "    # Calculate the average of the prices up till time t\n",
+    "    A_price = 0\n",
+    "    for history in h:\n",
+    "        A_price += history[0]/(t-1)\n",
+    "    \n",
+    "    # Calculate  delta_t\n",
+    "    delta_t = U_price  - A_price\n",
+    "    \n",
+    "    # Calculate the constrained price\n",
+    "    if abs(delta_t) < K*(t**(-1/4)):\n",
+    "        return = A_price + Sign(delta_t)*K*(t**(-1/4))\n",
+    "    else:\n",
+    "        return = U_price\n",
     "\n",
     "\n",
+    "    \n",
+    "#QUESTION (b):\n",
     "\n"
    ]
   }
