--- a/DDDMOR HW3.ipynb
+++ b/DDDMOR HW3.ipynb
@@ -269,8 +269,8 @@
    "metadata": {},
    "source": [
     "## Question c\n",
-    "In our plot we see the larger $\\kappa$ is the larger the regret is. \n",
-    "However we do note that for larger $\\kappa$ the regret function behaves more like $\\sqrt T \\log(T)$ whereas for small $\\kappa$ we get more linear regret. Hence we expect that asympotitically large $\\kappa$ will result in less regret compared to smaller $\\kappa$. The reason for this is if $\\kappa$ is large we are forced to spend more time on learning: we try prices that may in the first place seem less optimal. If we do this the probability of getting stuck at an incorrect value of the optimal price becomes smaller and we therefore also have less regret in the asymptotic case. Note that in our plot however $T$ is too small to see the asympotic case. \n"
+    "In our plot we see that for small $T$ we have that the larger $\\kappa$ is the larger the regret is. \n",
+    "However we do note that for some  $\\kappa > 0 $ the regret function behaves more like $\\sqrt T \\log(T)$ whereas for really small $\\kappa$ we get more linear regret. Hence we expect that asympotitically large enough $\\kappa $ will result in less regret compared to really small $\\kappa$. The reason for this is if $\\kappa$ is large enough we are forced to spend more time on learning: we try prices that may in the first place seem less optimal. If we do this the probability of getting stuck at an incorrect value of the optimal price becomes smaller and we therefore also have less regret in the asymptotic case. In our plot the regret line for $K = 0$ is already crossing some of other regret lines, meaning that for $T$ large enough the regret is indeed smaller if we choose $K$ large enough. However the regret graph for $\\kappa =0$ is not crossing all the other regret graphs because $T$ is not large enough.  \n"
    ]
   },
   {
